--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins in here
+.flex-row(@justify, @align) {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: @justify;
+    align-items: @align;
+}
