--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
 // Navigation Styles here
+nav {
+    margin-top: 2rem;
+    font-size: 1.6rem;
+    border-bottom: 2px dashed @navigation-border;
+    padding-bottom: 2rem;
+    .flex-row(space-between, center);
+    
+    a {
+        color: black;
+        text-decoration: none;
+        padding: 1.5rem;
+    }
+    
+    h1 {
+        margin-right: auto;
+    }
+}
