--- a/css/index.css
+++ b/css/index.css
@@ -168,22 +168,27 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-nav {
+.navigation {
+  width: 100%;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.navigation nav {
+  margin: auto;
+  max-width: 800px;
   margin-top: 2rem;
   font-size: 1.6rem;
-  border-bottom: 2px dashed #C0C0C0;
   padding-bottom: 2rem;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
-nav a {
+.navigation nav a {
   color: black;
   text-decoration: none;
   padding: 1.5rem;
 }
-nav h1 {
+.navigation nav h1 {
   margin-right: auto;
 }
 .footer {
