--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,18 +1,24 @@
 // Navigation Styles here
-nav {
-    margin-top: 2rem;
-    font-size: 1.6rem;
+.navigation {
+    width: 100%;
     border-bottom: 2px dashed @navigation-border;
-    padding-bottom: 2rem;
-    .flex-row(space-between, center);
-    
-    a {
-        color: black;
-        text-decoration: none;
-        padding: 1.5rem;
-    }
-    
-    h1 {
-        margin-right: auto;
+
+    nav {
+        margin: auto;
+        max-width: 800px;
+        margin-top: 2rem;
+        font-size: 1.6rem;
+        padding-bottom: 2rem;
+        .flex-row(center, center);
+
+        a {
+            color: black;
+            text-decoration: none;
+            padding: 1.5rem;
+        }
+
+        h1 {
+            margin-right: auto;
+        }
     }
 }
