--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,12 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home header h2 {
+  margin-top: 30px;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
