--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,18 @@
 .home {
+    
+  header {
+    border-bottom: 2px dashed @navigation-border;
+    
+    h2 {
+        margin-top: 30px;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-   
     
     .text-content {
       width: 48%;
