add sign me up button styling

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,3 +5,14 @@
     justify-content: @justify;
     align-items: @align;
 }
+
+.sign-button(@text-color, @bg-color) {
+    border-radius: 15px;
+    background: @bg-color;
+    font-size: 2rem;
+    width: 80%;
+    text-align: center;
+    padding: 1rem;
+    color: @text-color;
+    border: 1px solid @navigation-border;
+}
