--- a/css/index.css
+++ b/css/index.css
@@ -254,3 +254,13 @@ img {
   width: 30%;
   margin-bottom: 30px;
 }
+.home .content-pick .btn {
+  border-radius: 15px;
+  background: teal;
+  font-size: 2rem;
+  width: 80%;
+  text-align: center;
+  padding: 1rem;
+  color: white;
+  border: 1px solid #C0C0C0;
+}
