--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,7 +1,7 @@
 // Mixins in here
-.flex-row(@justify, @align) {
+.flex(@direction, @justify, @align) {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: @direction wrap;
     justify-content: @justify;
     align-items: @align;
 }
