--- a/css/index.css
+++ b/css/index.css
@@ -216,8 +216,12 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home {
+  width: 90%;
+}
 .home header {
   border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 10px;
 }
 .home header h2 {
   margin-top: 30px;
@@ -232,12 +236,31 @@ img {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+    order: 99;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+    text-align: center;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -247,13 +270,31 @@ img {
   padding-left: 1%;
   padding-right: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    padding: 0;
+  }
+}
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+    padding: 0;
+    order: 99;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+    margin: 0 0 30px;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -264,17 +305,31 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
-.home .content-pick .btn {
+.home .content-pick .destination .btn {
   border-radius: 15px;
-  background: teal;
+  background: #17A2B8;
   font-size: 2rem;
   width: 80%;
   text-align: center;
   padding: 1rem;
   color: white;
   border: 1px solid #C0C0C0;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
 }
