--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,9 @@
 .home {
+  width: 90%;
     
   header {
     border-bottom: 2px dashed @navigation-border;
+      padding-bottom: 10px;
     
     h2 {
         margin-top: 30px;
@@ -17,14 +19,30 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+        
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+        
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+        order: 99;
+      }
 
       img {
         border-radius: 10px;
+          
+        @media @mobile {
+          width: 100%;
+          text-align: center;
+        }
       }
     }
   }
@@ -36,17 +54,32 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+        
+      @media @mobile {
+        padding: 0;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+        
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+        order: 99;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+      
+    @media @mobile {
+      width: 100%;
+      margin: 0 0 30px;
+    }
 
     img {
       border-radius: 10px;
@@ -58,14 +91,23 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+      
+    @media @mobile {
+      .flex(column, center, center);
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
-    }
-      
-    .btn {
-      .sign-button(white, teal);
+        
+      .btn {
+        .sign-button(white, @button-bg);
+        width: 100%;
+      }
+        
+      @media @mobile {
+        width: 80%;
+      }
     }
   }
 }// home
