--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,6 +16,10 @@
             text-decoration: none;
             padding: 1.5rem;
         }
+        
+        a:hover {
+            .flash(2s);
+        }
 
         h1 {
             margin-right: auto;
