fix navigation margins

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,7 @@
 
     nav {
         margin: auto;
+        width: 90%;
         max-width: 800px;
         margin-top: 2rem;
         font-size: 1.6rem;
