--- a/less/home-page.less
+++ b/less/home-page.less
@@ -34,6 +34,7 @@
         width: 100%;
         padding: 0;
         order: 99;
+        text-align: center;
       }
 
       img {
@@ -41,6 +42,7 @@
           
         @media @mobile {
           width: 100%;
+          max-width: 400px;
           text-align: center;
         }
       }
