--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,5 @@
 // Navigation Styles here
+
 .navigation {
     width: 100%;
     border-bottom: 2px dashed @navigation-border;
@@ -22,6 +23,7 @@
             .flash(2s);
         }
 
+        /*Adjusted margin to align navigation to the sides*/
         h1 {
             margin-right: auto;
             
