--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,5 @@
 // Mixins in here
+
 .flex(@direction, @justify, @align) {
     display: flex;
     flex-flow: @direction wrap;
@@ -16,6 +17,8 @@
     color: @text-color;
     border: 1px solid @navigation-border;
 }
+
+/*Animation mixins*/
 
 @keyframes flash { 
     0% {
